--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "angular": "^1.5.5",
     "angular-animate": "^1.5.5",
     "angular-aria": "^1.5.5",
-    "angular-messages": "^1.5.5",
     "angular-material": "1.0.8",
+    "angular-material-data-table": "^0.10.9",
+    "angular-messages": "^1.5.5",
     "angular-ui-router": "0.2.18"
   },
   "scripts": {
